# Speed-Control-System

./: CMakeLists.txt  Doan.qmlproject.autosave  Doan.qmlproject.qtds  README.md  SpeedSign.py  arcitem.cpp  arcitem.h  classnames.txt  data.yaml  dep.txt  embedPython.qrc  inference.cpp  inference.h  inferencethread.cpp  inferencethread.h  qmlmodules  rcssmin.py.codeobj
content/: CMakeLists.txt  Cluster.qml  ClusterFunc.qml  LeftSignal.ui.qml  Light.ui.qml  NavigationItem.ui.qml  RightSignal.ui.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/Doan/: CMakeLists.txt  qmldir
imports/Doan/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp  speedinterface.cpp  speedinterface.h
yolov8/: utils.cpp  utils.h  yolov8.cpp  yolov8.h
